test/errors/no_capabilities.ecsact
package error.no_capabilities;

action NoCapabilitiesAction {
	i32 num;
}
